Fix layout gaps

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -98,15 +98,15 @@ body {
 	line-height: 1.5;
 	max-width: 1400px;
 	margin-inline: auto;
-	padding: var(--gap-lg);
-	font-family: var(--cv-font);
+	font-family: var(--font);
 	background-color: var(--grey-clr);
+	padding-block: var(--gap-lg);
 }
 
 h1,
 h2,
 h3 {
-	font-family: var(--cv-font-bold);
+	font-family: var(--font-bold);
 }
 
 h1 {
@@ -143,9 +143,22 @@ h3 {
 	gap: var(--gap-lg);
 }
 
+aside {
+	padding-left: var(--gap-lg);
+}
+
+main {
+	padding-right: var(--gap-lg);
+}
+
 @media (width <= 850px) {
 	.container {
 		grid-template-columns: 1fr;
+	}
+
+	aside,
+	main {
+		padding-inline: var(--gap-lg);
 	}
 
 	.canvasSection .body .item {
